# cc-team-python

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  USAGE.md  cc_team_standalone.py  dynamic_agent.py  pyproject.toml  requirements.txt  test_full_team.py  test_team.py
cc_team/: __init__.py  agent_spawner.py  cli.py  init.py  message_capture.py  team_manager.py  tui.py
cc_team/templates/: CLAUDE.md  config.yml
cc_team/ui/: __init__.py  dashboard.py
docs/: ARCHITECTURE.md  MESSAGE.md
misc/: a2a_client.py  agent_with_tools.py  minimal_agent.py  run_team.py  run_team_tui.py  simple_a2a_server.py  simple_agent.py  test_a2a_client.py
samples/: README.md
samples/my-new-team/developer/: CLAUDE.md
samples/team/: config.yml
samples/team/alice/: CLAUDE.md
samples/team/jerry/: CLAUDE.md
samples/team/tom/: CLAUDE.md
