[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-team"
version = "1.0.0"
description = "Claude Code Team System - Multi-agent teams with A2A protocol"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "textual", 
    "httpx",
    "fastapi",
    "uvicorn[standard]",
    "claude-agent-sdk",
    "a2a-sdk[http-server]",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest"
]

[project.scripts]
cc-team = "cc_team.cli:cli_main"

[project.urls]
Homepage = "https://github.com/yourusername/cc-team"
Repository = "https://github.com/yourusername/cc-team"
Documentation = "https://github.com/yourusername/cc-team#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["cc_team*"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
